# colback

./: Cargo.toml  LICENSE.txt  README.md
.config/: nextest.toml
.github/workflows/: ci.yaml
colback/: Cargo.toml
colback-core/: Cargo.toml
colback-core/src/: lib.rs
colback-core/tests/ui/: fail_no_default.rs  fail_no_option.rs  pass_basic_struct.rs
colback-derive/: Cargo.toml
colback-derive/src/: lib.rs  type_helpers.rs
colback-smoketest/: Cargo.toml
colback-smoketest/src/: lib.rs
colback/src/: lib.rs
colback/tests/ui/: basic_struct.stderr  fail_bad_null.stderr  fail_no_default.rs  fail_no_default.stderr  fail_no_option.rs  fail_no_option.stderr  pass_basic_struct.rs
