[package]
name = "colback-derive"
version = "0.1.1"
edition = "2024"
description = "proc macros for the colback crate"
license.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.23.*"
proc-macro-crate = "3.4.0"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
