[package]
name = "colback"
version = "0.1.0"
edition = "2024"
description = "Column backed structs"
keywords = ["dataframe", "derive"]
license.workspace = true
homepage.workspace = true

[dependencies]
polars = "0.52.*"
thiserror = "2"
colback-derive = { version = "=0.1.0", path = "../colback-derive/" }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
